<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="p_ModbusTx_InputCoils" Id="{b7e18312-80ba-4297-9b98-214f322b6e9d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusTx_InputCoils
VAR
END_VAR
VAR_OUTPUT
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Online/active values *)
mb_Input_Coils[0]:=bHeartbeatAlive; 
mb_Input_Coils[1]:=bFAULT;          
mb_Input_Coils[2]:=bStateFault;    
mb_Input_Coils[3]:=bLimitSummaryFault; 
mb_Input_Coils[4]:=bMinEnergyFault;
mb_Input_Coils[5]:=bRequiresTransfocatorFault;
mb_Input_Coils[6]:=bTableLimitFault;
mb_Input_Coils[7]:=FALSE;
mb_Input_Coils[8]:=FALSE;
mb_Input_Coils[9]:=FALSE;

(* Latched fault information *)
mb_Input_Coils[10]:=q_bHeartbeatLatch;
mb_Input_Coils[11]:=q_bFaultLatch;
mb_Input_Coils[12]:=q_bStateLatch;
mb_Input_Coils[13]:=q_bLimitSummaryFaultLatch;   
mb_Input_Coils[14]:=q_bMinEnergyFaultLatch;
mb_Input_Coils[15]:=q_bRequiresTransfocatorFaultLatch;
mb_Input_Coils[16]:=q_bTableLimitFaultLatch;
mb_Input_Coils[17]:=FALSE;
mb_Input_Coils[18]:=FALSE;
mb_Input_Coils[19]:=FALSE;

mb_Input_Coils[20]:=FALSE;  //Valve position readbacks
mb_Input_Coils[21]:=FALSE;  //Valve position readbacks
mb_Input_Coils[22]:=FALSE;  //Valve position readbacks
mb_Input_Coils[23]:=FALSE;  //Valve position readbacks
mb_Input_Coils[24]:=FALSE;  //Valve position readbacks
mb_Input_Coils[25]:=FALSE;  //Valve position readbacks
mb_Input_Coils[26]:=FALSE;  //Valve position readbacks
mb_Input_Coils[27]:=FALSE;  //Valve position readbacks
mb_Input_Coils[28]:=FALSE;  //Valve position readbacks
mb_Input_Coils[29]:=FALSE;  //Valve position readbacks
mb_Input_Coils[30]:=FALSE;  //Valve position readbacks
mb_Input_Coils[31]:=FALSE;  //Valve position readbacks
mb_Input_Coils[32]:=FALSE;  //Valve position readbacks
mb_Input_Coils[33]:=FALSE;  //Valve position readbacks
mb_Input_Coils[34]:=FALSE;  //Valve position readbacks
mb_Input_Coils[35]:=FALSE;  //Valve position readbacks
mb_Input_Coils[36]:=FALSE;  //Valve position readbacks
mb_Input_Coils[37]:=FALSE;  //Valve position readbacks
mb_Input_Coils[38]:=FALSE;  //Valve position readbacks
mb_Input_Coils[39]:=FALSE;  //Valve position readbacks
mb_Input_Coils[40]:=FALSE;  //Valve position readbacks
mb_Input_Coils[41]:=FALSE;  //Valve position readbacks
mb_Input_Coils[42]:=FALSE;  //Valve position readbacks
mb_Input_Coils[43]:=FALSE;  //Valve position readbacks
mb_Input_Coils[44]:=FALSE;  //Valve position readbacks
mb_Input_Coils[45]:=FALSE;  //Valve position readbacks
mb_Input_Coils[46]:=FALSE;  //Valve position readbacks
mb_Input_Coils[47]:=FALSE;  //Valve position readbacks
mb_Input_Coils[48]:=FALSE;  //Valve position readbacks
mb_Input_Coils[49]:=FALSE;  //Valve position readbacks
mb_Input_Coils[50]:=FALSE;  //Valve position readbacks
mb_Input_Coils[51]:=FALSE;  //Valve position readbacks
mb_Input_Coils[52]:=FALSE;  //Valve position readbacks
mb_Input_Coils[53]:=FALSE;  //Valve position readbacks
mb_Input_Coils[54]:=FALSE;  //Valve position readbacks
mb_Input_Coils[55]:=FALSE;  //Valve position readbacks
mb_Input_Coils[56]:=FALSE;  //Valve position readbacks
mb_Input_Coils[57]:=FALSE;  //Valve position readbacks
mb_Input_Coils[58]:=FALSE;  //Valve position readbacks
mb_Input_Coils[59]:=FALSE;  //Valve position readbacks
mb_Input_Coils[60]:=FALSE;  //Valve position readbacks
mb_Input_Coils[61]:=FALSE;  //Valve position readbacks
mb_Input_Coils[62]:=FALSE;  //Valve position readbacks
mb_Input_Coils[63]:=FALSE;  //Valve position readbacks
mb_Input_Coils[64]:=FALSE;  //Valve position readbacks
mb_Input_Coils[65]:=FALSE;  //Valve position readbacks
mb_Input_Coils[66]:=FALSE;  //Valve position readbacks
mb_Input_Coils[67]:=FALSE;  //Valve position readbacks
mb_Input_Coils[68]:=FALSE;  //Valve position readbacks
mb_Input_Coils[69]:=FALSE;  //Valve position readbacks
mb_Input_Coils[70]:=FALSE;  //Valve position readbacks
mb_Input_Coils[71]:=FALSE;  //Valve position readbacks
mb_Input_Coils[72]:=FALSE;  //Valve position readbacks
mb_Input_Coils[73]:=FALSE;  //Valve position readbacks
mb_Input_Coils[74]:=FALSE;  //Valve position readbacks
mb_Input_Coils[75]:=FALSE;  //Valve position readbacks
mb_Input_Coils[76]:=FALSE;  //Valve position readbacks
mb_Input_Coils[77]:=FALSE;  //Valve position readbacks
mb_Input_Coils[78]:=FALSE;  //Valve position readbacks
mb_Input_Coils[79]:=FALSE;  //Valve position readbacks
mb_Input_Coils[80]:=FALSE;  //Valve position readbacks
mb_Input_Coils[81]:=FALSE;  //Valve position readbacks
mb_Input_Coils[82]:=FALSE;  //Valve position readbacks
mb_Input_Coils[83]:=FALSE;  //Valve position readbacks
mb_Input_Coils[84]:=FALSE;  //Valve position readbacks
mb_Input_Coils[85]:=FALSE;  //Valve position readbacks
mb_Input_Coils[86]:=FALSE;  //Valve position readbacks
mb_Input_Coils[87]:=FALSE;  //Valve position readbacks
mb_Input_Coils[88]:=FALSE;  //Valve position readbacks
mb_Input_Coils[89]:=FALSE;  //Valve position readbacks
mb_Input_Coils[90]:=FALSE;  //Valve position readbacks
mb_Input_Coils[91]:=FALSE;  //Valve position readbacks
mb_Input_Coils[92]:=FALSE;  //Valve position readbacks
mb_Input_Coils[93]:=FALSE;  //Valve position readbacks
mb_Input_Coils[94]:=FALSE;  //Valve position readbacks
mb_Input_Coils[95]:=FALSE;  //Valve position readbacks
mb_Input_Coils[96]:=FALSE;  //Valve position readbacks
mb_Input_Coils[97]:=FALSE;  //Valve position readbacks
mb_Input_Coils[98]:=FALSE;  //Valve position readbacks
mb_Input_Coils[99]:=FALSE;  //Valve position readbacks
mb_Input_Coils[100]:=FALSE;  //Valve position readbacks
mb_Input_Coils[101]:=FALSE;  //Valve position readbacks
mb_Input_Coils[102]:=FALSE;  //Valve position readbacks
mb_Input_Coils[103]:=FALSE;  //Valve position readbacks
mb_Input_Coils[104]:=FALSE;  //Valve position readbacks
mb_Input_Coils[105]:=FALSE;  //Valve position readbacks
mb_Input_Coils[106]:=FALSE;  //Valve position readbacks
mb_Input_Coils[107]:=FALSE;  //Valve position readbacks
mb_Input_Coils[108]:=FALSE;  //Valve position readbacks
mb_Input_Coils[109]:=FALSE;  //Valve position readbacks
mb_Input_Coils[110]:=FALSE;  //Valve position readbacks
mb_Input_Coils[111]:=FALSE;  //Valve position readbacks
mb_Input_Coils[112]:=FALSE;  //Valve position readbacks
mb_Input_Coils[113]:=FALSE;  //Valve position readbacks
mb_Input_Coils[114]:=FALSE;  //Valve position readbacks
mb_Input_Coils[115]:=FALSE;  //Valve position readbacks
mb_Input_Coils[116]:=FALSE;  //Valve position readbacks
mb_Input_Coils[117]:=FALSE;  //Valve position readbacks
mb_Input_Coils[118]:=FALSE;  //Valve position readbacks
mb_Input_Coils[119]:=FALSE;  //Valve position readbacks
mb_Input_Coils[120]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[121]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[122]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[123]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[124]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[125]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[126]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[127]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[128]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[129]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[130]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[131]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[132]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[133]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[134]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[135]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[136]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[137]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[138]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[139]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[140]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[141]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[142]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[143]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[144]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[145]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[146]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[147]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[148]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[149]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[150]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[151]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[152]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[153]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[154]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[155]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[156]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[157]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[158]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[159]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[160]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[161]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[162]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[163]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[164]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[165]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[166]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[167]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[168]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[169]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[170]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[171]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[172]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[173]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[174]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[175]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[176]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[177]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[178]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[179]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[180]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[181]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[182]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[183]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[184]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[185]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[186]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[187]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[188]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[189]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[190]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[191]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[192]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[193]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[194]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[195]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[196]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[197]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[198]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[199]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[200]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[201]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[202]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[203]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[204]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[205]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[206]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[207]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[208]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[209]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[210]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[211]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[212]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[213]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[214]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[215]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[216]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[217]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[218]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[219]:=FALSE;  //Turbo pump readbacks
mb_Input_Coils[220]:=FALSE;  //VG readbacks
mb_Input_Coils[221]:=FALSE;  //VG readbacks
mb_Input_Coils[222]:=FALSE;  //VG readbacks
mb_Input_Coils[223]:=FALSE;  //VG readbacks
mb_Input_Coils[224]:=FALSE;  //VG readbacks
mb_Input_Coils[225]:=FALSE;  //VG readbacks
mb_Input_Coils[226]:=FALSE;  //VG readbacks
mb_Input_Coils[227]:=FALSE;  //VG readbacks
mb_Input_Coils[228]:=FALSE;  //VG readbacks
mb_Input_Coils[229]:=FALSE;  //VG readbacks
mb_Input_Coils[230]:=FALSE;  //VG readbacks
mb_Input_Coils[231]:=FALSE;  //VG readbacks
mb_Input_Coils[232]:=FALSE;  //VG readbacks
mb_Input_Coils[233]:=FALSE;  //VG readbacks
mb_Input_Coils[234]:=FALSE;  //VG readbacks
mb_Input_Coils[235]:=FALSE;  //VG readbacks
mb_Input_Coils[236]:=FALSE;  //VG readbacks
mb_Input_Coils[237]:=FALSE;  //VG readbacks
mb_Input_Coils[238]:=FALSE;  //VG readbacks
mb_Input_Coils[239]:=FALSE;  //VG readbacks
mb_Input_Coils[240]:=FALSE;  //VG readbacks
mb_Input_Coils[241]:=FALSE;  //VG readbacks
mb_Input_Coils[242]:=FALSE;  //VG readbacks
mb_Input_Coils[243]:=FALSE;  //VG readbacks
mb_Input_Coils[244]:=FALSE;  //VG readbacks
mb_Input_Coils[245]:=FALSE;  //VG readbacks
mb_Input_Coils[246]:=FALSE;  //VG readbacks
mb_Input_Coils[247]:=FALSE;  //VG readbacks
mb_Input_Coils[248]:=FALSE;  //VG readbacks
mb_Input_Coils[249]:=FALSE;  //VG readbacks
mb_Input_Coils[250]:=FALSE;  //VG readbacks
mb_Input_Coils[251]:=FALSE;  //VG readbacks
mb_Input_Coils[252]:=FALSE;  //VG readbacks
mb_Input_Coils[253]:=FALSE;  //VG readbacks
mb_Input_Coils[254]:=FALSE;  //VG readbacks
mb_Input_Coils[255]:=FALSE;  //VG readbacks]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>